<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- Tycho requires Maven 3 -->
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<groupId>org.genivi.faracon</groupId>
	<artifactId>org.genivi.faracon.parent</artifactId>
	<version>0.9.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>


	<properties>
		<platform-version-name>oxygen</platform-version-name>
		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho-version>1.3.0</tycho-version>
		<junit-version>4.13.1</junit-version>
		<slf4j-version>1.6.1</slf4j-version>

		<!-- Pinned versions needed for Xtext/Xtend Maven plug-in -->
		<!-- Pinned to OXYGEN versions!!! -->
		<xtextVersion>2.18.0</xtextVersion>
		<jdt-core-version>3.13.100</jdt-core-version>
		<jdt-compiler-apt-version>1.3.60</jdt-compiler-apt-version>
		<jdt-compiler-tool-version>1.2.51</jdt-compiler-tool-version>
		<emf-codegen-version>2.11.0</emf-codegen-version>
		<xtend-version>2.18.0</xtend-version>
		<guava.version>15.0</guava.version>

		<skip.deployment>true</skip.deployment>
	</properties>

	<modules>
		<!-- target platform -->
		<module>../org.genivi.faracon.target</module>
		<!-- partial redundant copies of CommonAPI modules -->
		<module>../../plugins/org.genivi.commonapi.core</module>
		<module>../../plugins/org.genivi.commonapi.someip</module>
		<!-- actual code modules -->
		<module>../../plugins/org.genivi.faracon</module>
		<module>../../plugins/org.genivi.faracon.console</module>
		<module>../../plugins/org.genivi.faracon.cli</module>
		<module>../../plugins/org.genivi.faracon.eclipse.ui</module>
		<!-- test modules -->
		<module>../../tests/org.genivi.faracon.tests</module>
		<!-- documentation/help modules -->
		<!-- <module>../../docs/org.genivi.faracon.docs</module> -->
		<!-- release modules -->
		<module>../../features/org.genivi.faracon.feature</module>
		<module>../../features/org.genivi.faracon.console.feature</module>
		<module>../../features/org.genivi.faracon.console.franca.feature</module>
		<module>../../features/org.genivi.faracon.cli.feature</module>
		<module>../../features/org.genivi.faracon.eclipse.ui.feature</module>
		<module>../../products/org.genivi.faracon.cli.product</module>
		<!-- <module>../../releng/org.genivi.faracon.updatesite</module> -->
	</modules>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<target>
						<artifact>
							<groupId>org.genivi.faracon</groupId>
							<artifactId>org.genivi.faracon.targetplatform</artifactId>
							<version>${project.version}</version>
							<classifier>fara-${platform-version-name}${artop-suffix}</classifier>
						</artifact>
					</target>
					<filters>
					</filters>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}/src-gen</directory>
							<includes>
								<include>**</include>
							</includes>
							<excludes>
								<exclude>.gitignore</exclude>
							</excludes>
						</fileset>
						<fileset>
							<directory>${basedir}/xtend-gen</directory>
							<includes>
								<include>**</include>
							</includes>
							<excludes>
								<exclude>.gitignore</exclude>
							</excludes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.4</version>
				<configuration>
					<excludes>
						<exclude>**/*.ecore</exclude>
					</excludes>
					<!-- <append>true</append> -->
				</configuration>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<phase>initialize</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->
							<destFile>${project.build.directory}/coverage-data/jacoco-ut.exec</destFile>
							<!-- Sets the name of the property containing the settings for JaCoCo 
								runtime agent. -->
							<propertyName>surefireArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->
							<dataFile>${project.build.directory}/coverage-data/jacoco-ut.exec</dataFile>
							<!-- Sets the output directory for the code coverage report. -->
							<outputDirectory>${project.build.directory}/coverage-reports/jacoco-ut</outputDirectory>
						</configuration>
					</execution>
<!-- 					<execution> -->
<!-- 						<id>default-check</id> -->
<!-- 						<goals> -->
<!-- 							<goal>check</goal> -->
<!-- 						</goals> -->
<!-- 						<configuration> -->
<!-- 							<rules> -->
<!-- 								<rule> -->
<!-- 									<element>BUNDLE</element> -->
<!-- 									<limits> -->
<!-- 										<limit> -->
<!-- 											<counter>COMPLEXITY</counter> -->
<!-- 											<value>COVEREDRATIO</value> -->
<!-- 											<minimum>0.60</minimum> -->
<!-- 										</limit> -->
<!-- 									</limits> -->
<!-- 								</rule> -->
<!-- 							</rules> -->
<!-- 						</configuration> -->
<!-- 					</execution> -->
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!-- TYCHO -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>6.0</source>
						<target>6.0</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<archiveSite>true</archiveSite>
					</configuration>
				</plugin>

				<!-- enable source bundle generation -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<!-- MacOS specific option to run an SWT application from the command 
							line. See http://www.eclipse.org/swt/faq.php#carbonapp -->
						<argLine>${os-jvm-flags} -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m ${surefireArgLine}</argLine>
					</configuration>
				</plugin>

				<!--This configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jacoco</groupId>
										<artifactId>jacoco-maven-plugin</artifactId>
										<versionRange>[0.7.6,)</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>maven-osgi-test-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<!-- APACHE MAVEN PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.1</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.15</version>
					<configuration>
						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m ${surefireArgLine}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2-beta-4</version>
				</plugin>
				<!-- If you are releasing your artifacts on OSSRH, you need to make one more configuration change -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.1</version>
					<configuration>
						<mavenExecutorId>forked-path</mavenExecutorId>
						<useReleaseProfile>false</useReleaseProfile>
						<arguments>${arguments} -Psonatype-oss-release</arguments>
					</configuration>
				</plugin>
				<!-- Establish property to control whether to release an artifact -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<configuration>
						<!-- default is true, i.e. do skip -->
						<skip>${skip.deployment}</skip>
					</configuration>
				</plugin>

				<!-- OTHER PLUGINS -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.3</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>${project.build.directory}/src-gen</source>
								</sources>
								<sources>
									<source>${project.build.directory}/xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.dash.maven</groupId>
					<artifactId>eclipse-signing-maven-plugin</artifactId>
					<version>1.0.5</version>
				</plugin>
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>3.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend-version}</version>
					<configuration>
						<!-- need to prefix by basedir to generate to currently built module -->
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
					</configuration>
					<!-- workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=536445 -->
					<dependencies>
						<dependency>
							<groupId>org.eclipse.jdt</groupId>
							<artifactId>org.eclipse.jdt.core</artifactId>
							<version>${jdt-core-version}</version>
						</dependency>
						<dependency>
							<groupId>org.eclipse.jdt</groupId>
							<artifactId>org.eclipse.jdt.compiler.apt</artifactId>
							<version>${jdt-compiler-apt-version}</version>
						</dependency>
						<dependency>
							<groupId>org.eclipse.jdt</groupId>
							<artifactId>org.eclipse.jdt.compiler.tool</artifactId>
							<version>${jdt-compiler-tool-version}</version>
						</dependency>
						<dependency>
							<groupId>org.eclipse.emf</groupId>
							<artifactId>org.eclipse.emf.codegen</artifactId>
							<version>${emf-codegen-version}</version>
						</dependency>
						<dependency>
							<groupId>com.google.guava</groupId>
							<artifactId>guava</artifactId>
							<version>${guava.version}</version>
						</dependency>
					</dependencies>
					<!-- end workaround -->
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- <pluginRepositories> -->
	<!--pluginRepository> <id>tycho-0.14.0-staged</id> <url>https://oss.sonatype.org/content/repositories/orgeclipsetycho-004/</url> 
		</pluginRepository -->
	<!-- <pluginRepository> -->
	<!-- <id>sonatype</id> -->
	<!-- <url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url> -->
	<!-- <releases> -->
	<!-- <enabled>true</enabled> -->
	<!-- </releases> -->
	<!-- <snapshots> -->
	<!-- <enabled>true</enabled> -->
	<!-- </snapshots> -->
	<!-- </pluginRepository> -->
	<!-- <pluginRepository> -->
	<!-- <id>xtend</id> -->
	<!-- <url>http://repo.maven.apache.org/maven2</url> -->
	<!-- </pluginRepository> -->
	<!-- </pluginRepositories> -->

	<profiles>
		<profile>
			<id>without-artop</id>
			<properties>
				<artop-suffix></artop-suffix>
			</properties>
		</profile>
		<profile>
			<id>with-artop</id>
			<properties>
				<artop-suffix>-artop</artop-suffix>
			</properties>
		</profile>

		<profile>
			<id>macosx-jvm-flags</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
			</properties>
		</profile>
		<profile>
			<id>non-macosx-jvm-flags</id>
			<activation>
				<os>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<os-jvm-flags>
				</os-jvm-flags>
			</properties>
		</profile>

		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<!-- When you use maven-release-plugin and run mvn release:perform, the property value will be set to true -->
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j-version}</version>
				<scope>compile</scope>
			</dependency>
			<!--Binding for log4j version 1.2.x You also need to place log4j.jar on your class path. -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j-version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
				<scope>runtime</scope>
			</dependency>
			<!--Binding for commons logging over slf4j -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j-version}</version>
				<scope>runtime</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<name>Franca ARA Converter</name>
	<description>The Franca ARA Converter is a model transformation tool which can translate Franca IDL to Adaptive AUTOSAR and vice versa.</description>
	<url>https://github.com/GENIVI/franca_ara_tools</url>
	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
       All rights reserved.

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
       http://www.eclipse.org/legal/epl-v10.htm
      		</comments>
		</license>
	</licenses>
	<inceptionYear>2019</inceptionYear>
	<issueManagement>
		<system>github issue tracker</system>
		<url>https://github.com/GENIVI/franca_ara_tools/issues</url>
	</issueManagement>
	<organization>
		<name>GENIVI Alliance</name>
		<url>https://github.com/GENIVI</url>
	</organization>
	<developers>
		<developer>
			<id>tgoerg</id>
			<name>Torsten Goerg</name>
			<email>torsten.goerg@itemis.de</email>
			<organization>itemis AG</organization>
			<organizationUrl>http://www.itemis.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>kbirken</id>
			<name>Klaus Birken</name>
			<email>klaus.birken@itemis.de</email>
			<organization>itemis AG</organization>
			<organizationUrl>http://www.itemis.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>
</project>
